changes on comment model
